[project]
name = "data-dragon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "streamlit-extras>=0.7.5",
    "streamlit-lottie>=0.0.5",
    "wordcloud>=1.9.4",
]
